k8s/aks-ingress/nginx-hello-loadbalancer-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-loadbalancer
  annotations:
    # service.beta.kubernetes.io/azure-load-balancer-ipv4
spec:
  type: LoadBalancer
  selector:
    app: nginx-hello
  ports:
    - port: 80
